fix: overflow price at popup mobile

--- a/clips/popup-banner/clip/clip.css
+++ b/clips/popup-banner/clip/clip.css
@@ -367,12 +367,11 @@
   }
 
   .product-description {
-    width: 180px;
+    max-width: 180px;
     height: 30px;
-    min-width: 180px;
-    max-width: 202.507px;
     font-size: 11px;
   }
+
   .price-wrapper {
     gap: 9px;
     font-size: 13px;
@@ -473,7 +472,7 @@
   .title {
     width: 436px;
     font-size: 1.8rem;
-    line-height: 26px;
+    line-height: 1.85rem;
     -webkit-line-clamp: 2;
   }
 
@@ -642,8 +641,8 @@
   }
 
   .title {
-    font-size: 1.5rem;
-    line-height: 16px;
+    font-size: 1.1rem;
+    line-height: 1.15rem;
     margin-bottom: -10px;
     max-width: 259px;
     -webkit-line-clamp: 2;
